--- a/CaseStudyPage1.html
+++ b/CaseStudyPage1.html
@@ -5,10 +5,10 @@
     <link rel="stylesheet" type="text/css" href="Case.css"></type>
   </head>
 
-  <body background="">
+  <body>
     <div class="margin">
-      <img src="file:///C:/Users/Admin/Pictures/419261811_325441283143793_162150719884304255_n.jpg">
-      <img class="logo" src="file:///C:/Users/Admin/Pictures/Logo%20-%20Original%20-%205000x5000.jpg">
+      <img src="c:\Users\Admin\Pictures\419261811_325441283143793_162150719884304255_n.jpg">
+      <img class="logo" src="c:\Users\Admin\Pictures\Logo - Original - 5000x5000.jpg">
          <p>Contact Us</p>
          <p2>About Us</p2>
          <p3>WELCOME TO PAWS & CLAWS VetCare</p3>
@@ -16,4 +16,5 @@
      </div>
 
   </body>
+
 </html>
