--- a/CaseStudyPage1.html
+++ b/CaseStudyPage1.html
@@ -9,11 +9,14 @@
     <div class="margin">
       <img src="c:\Users\Admin\Pictures\419261811_325441283143793_162150719884304255_n.jpg">
       <img class="logo" src="c:\Users\Admin\Pictures\Logo - Original - 5000x5000.jpg">
-         <p>Contact Us</p>
-         <p2>About Us</p2>
-         <p3>WELCOME TO PAWS & CLAWS VetCare</p3>
-         <p4>Get Started</p4>
-     </div>
+      <button id="contactUs">Contact Us</button>
+      <button id="aboutUs">About Us</button>
+      <p3>WELCOME TO PAWS & CLAWS VetCare</p3>
+
+      <a href="RegisterPage2.html" target="_blank">
+        <button id="getStarted">Get Started</button>
+      </a>
+    </div>
 
   </body>
 
